dnl# -*- sh -*-
dnl# the "configure" script is made from this by running GNU "autoconf"
dnl#
dnl# Configuration script for Dreammp3
dnl#
dnl# by BeN(jamin) Gerard <ben@sashipa.com>


AC_INIT(main.c)
AC_PROG_MAKE_SET

PACKAGE=dreammp3
VERSION=1.0
DREAMMP3_URL="http://sashipa.ben.free.fr/dreammp3"

# ENABLE OPTIONS
AC_ARG_ENABLE(debug,    [  --enable-debug          Compile with debug facilities [default=no]], DEBUG="yes", DEBUG="no")

# WITH OPTIONS
AC_ARG_WITH(sh-prefix,  [  --with-sh-prefix        Specify sh tools prefix [default=]],  SHPREFIX="$with_sh_prefix", SHPREFIX="")
AC_ARG_WITH(arm-prefix, [  --with-arm-prefix       Specify arm tools prefix [default=]],  ARMPREFIX="$with_arm_prefix", ARMPREFIX="")
AC_ARG_WITH(kos,        [  --with-kos              Specify kos [default=kos]], KOS_BASE="$with_kos", KOS_BASE="kos")

# Display a warning message if target specific prefix nor specific target
# compiler have been setted.
# This test is not very accurate since it does not test for other tools.
if test -z "$SHPREFIX" -a -z "$SH_CC"; then
    AC_MSG_RESULT([WARNING: You do *NOT* have specified an sh-prefix nor a default sh compiler (SH_CC).])
fi

if test -z "$ARMPREFIX" -a -z "$ARM_CC"; then
    AC_MSG_RESULT([WARNING: You do *NOT* have specified an arm-prefix nor a default arm compiler (ARM_CC).])
fi

# Configure include/config.h
[
PACKAGE_STR="\"$PACKAGE\""
VERSION_STR="\"$VERSION\""
VERSION_MAJOR=`expr "$VERSION" : '\([0-9]*\).*' \| 1`
VERSION_MINOR=`expr "$VERSION" : '[0-9]*\.\([0-9]*\)' \| 0`]
VERSION_NUM=0x`printf "%d%02d" $VERSION_MAJOR $VERSION_MINOR`
BREAKPOINT="[{*(int *)1 = (N)}]"
DREAMMP3_URL_STR="\"$DREAMMP3_URL\""
]
AC_SUBST(PACKAGE)
AC_SUBST(PACKAGE_STR)
AC_SUBST(VERSION)
AC_SUBST(VERSION_STR)
AC_SUBST(VERSION_NUM)
AC_SUBST(BREAKPOINT)
AC_SUBST(DREAMMP3_URL_STR)
test $DEBUG != "yes"
DEBUG=$?
AC_SUBST(DEBUG)

DEL="rm -f"

AC_MSG_RESULT([*******************************])
AC_MSG_RESULT([*                           ***])
AC_MSG_RESULT([** Configure DREAMCAST tools **])
AC_MSG_RESULT([***                           *])
AC_MSG_RESULT([*******************************])

if test -z "$SH_CC"; then
    AC_PATH_PROG(SH_CC,       ${SHPREFIX}gcc,      echo, [$PATH])
fi
if test -z "$SH_CXX"; then
    AC_PATH_PROG(SH_CXX,      ${SHPREFIX}g++,      echo, [$PATH])
fi
if test -z "$SH_AS"; then
    AC_PATH_PROG(SH_AS,       ${SHPREFIX}as,       echo, [$PATH])
fi
if test -z "$SH_AR"; then
    AC_PATH_PROG(SH_AR,       ${SHPREFIX}ar,       echo, [$PATH])
fi
if test -z "$SH_RANLIB"; then
    AC_PATH_PROG(SH_RANLIB,   ${SHPREFIX}ranlib,   echo, [$PATH])
fi
if test -z "$SH_OBJCOPY"; then
    AC_PATH_PROG(SH_OBJCOPY,  ${SHPREFIX}objcopy,  echo, [$PATH])
fi
if test -z "$SH_LD"; then
    AC_PATH_PROG(SH_LD,       ${SHPREFIX}ld,       echo, [$PATH])
fi
if test -z "$SH_NM"; then
    AC_PATH_PROG(SH_NM,       ${SHPREFIX}nm,       echo, [$PATH])
fi
REQUIRED_SH_TOOLS="$SH_CC $SH_AS $SH_AR $SH_RANLIB $SH_LD $SH_NM $SH_OBJCOPY"

if test -z "$ARM_CC"; then
    AC_PATH_PROG(ARM_CC,       ${ARMPREFIX}gcc,      echo, [$PATH])
fi
if test -z "$ARM_CXX"; then
    AC_PATH_PROG(ARM_CXX,      ${ARMPREFIX}g++,      echo, [$PATH])
fi
if test -z "$ARM_AS"; then
    AC_PATH_PROG(ARM_AS,       ${ARMPREFIX}as,       echo, [$PATH])
fi
if test -z "$ARM_AR"; then
    AC_PATH_PROG(ARM_AR,       ${ARMPREFIX}ar,       echo, [$PATH])
fi
if test -z "$ARM_RANLIB"; then
    AC_PATH_PROG(ARM_RANLIB,   ${ARMPREFIX}ranlib,   echo, [$PATH])
fi
if test -z "$ARM_OBJCOPY"; then
    AC_PATH_PROG(ARM_OBJCOPY,  ${ARMPREFIX}objcopy,  echo, [$PATH])
fi
if test -z "$ARM_LD"; then
    AC_PATH_PROG(ARM_LD,       ${ARMPREFIX}ld,       echo, [$PATH])
fi
if test -z "$ARM_NM"; then
    AC_PATH_PROG(ARM_NM,       ${ARMPREFIX}nm,       echo, [$PATH])
fi
REQUIRED_ARM_TOOLS="$ARM_CC $ARM_AS $ARM_AR $ARM_RANLIB $ARM_LD $ARM_NM $ARM_OBJCOPY"

REQUIRED_DC_TOOLS="$REQUIRED_SH_TOOLS $REQUIRED_ARM_TOOLS"

for i in $REQUIRED_DC_TOOLS; do
    if test "x$i" = "xecho"; then
        AC_MSG_ERROR([Could not find all required tools to compile for dreamcast in your PATH.])
    fi
done

SH_CFLAGS="-Wall -O4"
SH_CFLAGS="$SH_CFLAGS -ml -m4-single-only"
SH_CFLAGS="$SH_CFLAGS -fno-builtin -fno-strict-aliasing -fomit-frame-pointer"
SH_CFLAGS="$SH_CFLAGS -I. -I.."

SH_ASFLAGS="-little"
SH_ARFLAGS="cr"
SH_LDFLAGS="-ml -m4-single-only -nostartfiles -nostdlib -static -Wl,-Ttext=0x8c010000"

ARM_CFLAGS="-mcpu=arm7 -Wall -O2"
ARM_AFLAGS="-marm7"

AC_MSG_RESULT([***************************])
AC_MSG_RESULT([*                       ***])
AC_MSG_RESULT([** Configure KallistiOS  **])
AC_MSG_RESULT([***                       *])
AC_MSG_RESULT([***************************])
if test ! -d "$KOS_BASE" ; then
    AC_MSG_ERROR([KallistiOS '$KOS_BASE' not found. Use --with-kos.])
else
    AC_MSG_RESULT([checking for KalistiOS... $KOS_BASE])
fi
SH_LDFLAGS="$SH_LDFLAGS -L$KOS_BASE"

AC_PATH_PROG(KOS_GENROMFS, genromfs, no, $PATH:$KOS_BASE/utils/genromfs)
if test "x$KOS_GENROMFS" = "xno"; then
    AC_MSG_ERROR([Could not find kos gemromfs program.])
fi

AC_MSG_RESULT([--------------------------------------])


CC="$SH_CC"
CFLAGS="$SH_CFLAGS"
CXX="$SH_CXX"
CXXFLAGS="$SH_CXXFLAGS"
AS="$SH_AS"
ASFLAGS="$SH_ASFLAGS"
AR="$SH_AR"
ARFLAGS="$SH_ARFLAGS"
RANLIB="$SH_RANLIB"
LD="$SH_LD"
LDFLAGS="$SH_LDFLAGS"
OBJCOPY="$SH_OBJCOPY"

AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_MAKE_SET

AC_SUBST(DREAMMP3URL)
AC_SUBST(LIBCOMMAND)
AC_SUBST(MAKEDEPEND)
AC_SUBST(DEL)

AC_SUBST(SH_CC)
AC_SUBST(SH_CXX)
AC_SUBST(SH_AS)
AC_SUBST(SH_AR)
AC_SUBST(SH_RANLIB)
AC_SUBST(SH_OBJCOPY)
AC_SUBST(SH_LD)
AC_SUBST(MAKE)

AC_SUBST(SH_CFLAGS)
AC_SUBST(SH_CXXFLAGS)
AC_SUBST(SH_ASFLAGS)
AC_SUBST(SH_ARFLAGS)
AC_SUBST(SH_LDFLAGS)

AC_SUBST(ARM_CC)
AC_SUBST(ARM_CXX)
AC_SUBST(ARM_AS)
AC_SUBST(ARM_AR)
AC_SUBST(ARM_RANLIB)
AC_SUBST(ARM_OBJCOPY)
AC_SUBST(ARM_LD)

AC_SUBST(ARM_CFLAGS)
AC_SUBST(ARM_CXXFLAGS)
AC_SUBST(ARM_ASFLAGS)
AC_SUBST(ARM_ARFLAGS)
AC_SUBST(ARM_LDFLAGS)

AC_SUBST(KOS_ARCH)
AC_SUBST(KOS_LOADER)
AC_SUBST(KOS_BASE)
AC_SUBST(KOS_GENROMFS)

AC_OUTPUT([Makefile.inc include/config.h:config.h.in])

AC_MSG_RESULT([**************************************])
AC_MSG_RESULT([* Compilation options summary:])
AC_MSG_RESULT([*   debug-mode          : $DEBUG])
AC_MSG_RESULT([*   browse-info         : $BROWSE_INFO])
if test "x$DREAMCAST" = "xyes"; then
AC_MSG_RESULT([*      ------------------------------])
AC_MSG_RESULT([*   dreamcast           : $DREAMCAST])
AC_MSG_RESULT([* - sh (core) target    : $SHTARGET])
AC_MSG_RESULT([* - arm (audio) target  : $ARMTARGET])
AC_MSG_RESULT([* - kos                 : $KOS_BASE])

elif test "x$XMMS_CONFIG" != "xno"; then
AC_MSG_RESULT([*   xmms input plugin : $XMMS_INPUT_PLUGIN_DIR])
else
AC_MSG_RESULT([*      ------------------------------])
AC_MSG_RESULT([*   xmms-config not found in your exec path.])
AC_MSG_RESULT([*   sc68 xmms plugin will *NOT* be installed.])
AC_MSG_RESULT([*   Get xmms-devel package or source code xmms.])
AC_MSG_RESULT([*            <http://www.xmms.org>])
fi
AC_MSG_RESULT([**************************************])

dnl#
dnl# End of "$Id: configure.in,v 1.1.1.1 2002-08-26 14:14:34 ben Exp $".
dnl#
